<resources>
    <string name="app_name">project_testing</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">嗑藥王</string>
    <string name="nav_header_subtitle">Beta 測試版</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">首頁</string>
    <string name="menu_mybag">我的藥袋</string>
    <string name="menu_completion">完成度</string>
    <string name="menu_health">健康狀況</string>
    <string name="menu_setting">設定</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="advanced">進階</string>
</resources>
