<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_mybag"
            android:icon="@drawable/ic_menu_mybag"
            android:title="@string/menu_mybag" />
        <item
            android:id="@+id/nav_completion"
            android:icon="@drawable/ic_menu_completion"
            android:title="@string/menu_completion" />
        <item
            android:id="@+id/nav_health"
            android:icon="@drawable/ic_menu_health"
            android:title="@string/menu_health" />
    </group>

    <item android:title="@string/advanced">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/menu_setting" />

        </menu>
    </item>

</menu>
